--- a/gold-service-dev.properties
+++ b/gold-service-dev.properties
@@ -1,3 +1,3 @@
-gold.service-gold-type=99.9
-gold.service-gold-price-hyderabad=35540
-gold.service-gold-price-mumbai=37650
+gold.service-gold-type=updated 99.9
+gold.service-gold-price-hyderabad=updated 35540
+gold.service-gold-price-mumbai=updated 37650
