--- a/courier-service-dev.properties
+++ b/courier-service-dev.properties
@@ -1,3 +1,3 @@
-courier.service-id=5478
-courier.service-from-city=pune
-courier.service-to-city=delhi
+courier.service-id=updated 5478
+courier.service-from-city=updated pune
+courier.service-to-city=updated delhi
