--- a/courier-service.properties
+++ b/courier-service.properties
@@ -1,3 +1,3 @@
-courier.service-id=updated 1001
-courier.service-from-city=updated hyderabad
-courier.service-to-city=updated bangalore
+courier.service-id=newly-updated 1001
+courier.service-from-city=newly-updated hyderabad
+courier.service-to-city=newly-updated bangalore
