--- a/courier-service-dev.properties
+++ b/courier-service-dev.properties
@@ -1,3 +1,3 @@
-courier.service-id=updated 5478
-courier.service-from-city=updated pune
-courier.service-to-city=updated delhi
+courier.service-id=newly-updated 5478
+courier.service-from-city=newly-updated pune
+courier.service-to-city=newly-updated delhi
