--- a/gold-service.properties
+++ b/gold-service.properties
@@ -1,3 +1,3 @@
-gold.service-gold-type=updated 97.7
-gold.service-gold-price-hyderabad= updated 30989
-gold.service-gold-price-mumbai= updated 30140
+gold.service-gold-type=newly-updated 97.7
+gold.service-gold-price-hyderabad= newly-updated 30989
+gold.service-gold-price-mumbai= newly-updated 30140
