--- a/employee-service.properties
+++ b/employee-service.properties
@@ -1,1 +1,1 @@
-app.service-name = Updated Employee Service - Updated for Spring Cloud Bus Testing
+app.service-name = newUpdated Employee Service - Updated for Spring Cloud Bus Testing
