--- a/department-service.properties
+++ b/department-service.properties
@@ -1,1 +1,1 @@
-app.service-name = Updated Department Service - Updated for Spring Cloud Bus Testing
+app.service-name = newly Updated Department Service - Updated for Spring Cloud Bus Testing
