--- a/employee-service.properties
+++ b/employee-service.properties
@@ -1,1 +1,1 @@
-app.service-name = newlyUpdated Employee Service - Updated for Spring Cloud Bus Testing
+app.service-name = WebhooknewlyUpdated Employee Service - Updated for Spring Cloud Bus Testing
