--- a/department-service.properties
+++ b/department-service.properties
@@ -1,1 +1,1 @@
-app.service-name = POCWebhooknewly2122 Updated Department Service - Updated for Spring Cloud Bus Testing
+app.service-name = 1234POCWebhooknewly2122 Updated Department Service - Updated for Spring Cloud Bus Testing
