--- a/courier-service.properties
+++ b/courier-service.properties
@@ -1,3 +1,3 @@
-courier.service-id=newly-updated1007 1001
-courier.service-from-city=newly-updated1057 hyderabad
-courier.service-to-city=newly-updated1057 bangalore
+courier.service-id=webhook1007 1001
+courier.service-from-city=webhook1057 hyderabad
+courier.service-to-city=webhook1057 bangalore
