--- a/gold-service.properties
+++ b/gold-service.properties
@@ -1,3 +1,3 @@
-gold.service-gold-type=webhook1000 97.7
-gold.service-gold-price-hyderabad= webhook1000 30989
-gold.service-gold-price-mumbai= webhook1000 30140
+gold.service-gold-type=24carat
+gold.service-gold-price-hyderabad=42,000
+gold.service-gold-price-mumbai=41,870.00
