--- a/gold-service.properties
+++ b/gold-service.properties
@@ -1,3 +1,3 @@
 gold.service-gold-type=25carat
-gold.service-gold-price-hyderabad=42,000
-gold.service-gold-price-mumbai=41,870.00
+gold.service-gold-price-hyderabad=42,0007777
+gold.service-gold-price-mumbai=41,870.009999
