--- a/courier-service.properties
+++ b/courier-service.properties
@@ -1,3 +1,3 @@
-courier.service-id=webhook1007 1001
-courier.service-from-city=webhook1057 hyderabad
-courier.service-to-city=webhook1057 bangalore
+courier.service-id= 1001
+courier.service-from-city= hyderabad
+courier.service-to-city= bangalore
