--- a/courier-service.properties
+++ b/courier-service.properties
@@ -1,3 +1,3 @@
-courier.service-id= 1001
-courier.service-from-city= hyderabad
-courier.service-to-city= bangalore
+courier.service-id= new1001
+courier.service-from-city= newhyderabad
+courier.service-to-city= newbangalore
